force-app/main/default/objects/OMVPortalMenuItem__c/OMVPortalMenuItem__c.object-meta.xml
<CustomObject>
    <description>Custom object used to define top menu options for the OMV portal</description>
    <label>OMV Portal Menu Item</label>
    <nameField>
        <label>Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OMV Portal Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>