force-app/main/default/objects/OMVPortalMenuItem__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <description>Order in which this item will be presented in the menu</description>
    <label>Order Item</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>