force-app/main/default/objects/OMVPortalMenuItem__c/fields/PortalLayout__c.field-meta.xml
<CustomField>
    <fullName>PortalLayout__c</fullName>
    <description>OMV Portal layout that will use this menu option</description>
    <label>Portal Layout</label>
    <referenceTo>OMVPortalLayoutConfiguration__c</referenceTo>
    <relationshipLabel>OMV Portal Menu Items</relationshipLabel>
    <relationshipName>OMVPortalMenuItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>