force-app/main/default/objects/OMVPortalMenuItem__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Relative url where this menu item will take the user to.</description>
    <label>Item URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>